Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-360

fastbinary fails if field has another type

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • None
    • 0.1
    • Python - Library
    • None
    • Patch Available

    Description

      If readed field type mismatchs spec field type fastbinary throws error instead of skip one. The TBinaryProtocol skips field.

      Attachments

        1. thrift-fastbinary-types.diff
          1 kB
          Alexander Shigin

        Activity

          People

            shigin Alexander Shigin
            shigin Alexander Shigin
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: