THRIFT-360. python: Make fastbinary skip struct fields with the wrong type

git-svn-id: https://svn.apache.org/repos/asf/incubator/thrift/trunk@758071 13f79535-47bb-0310-9956-ffa450edef68